[package]
name = "xkcd-rss-to-json-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.24"
rss = "2.0.7"
once_cell = "1.19.0"
futures = "0.3.x"
serde = { features = ["derive"] }
serde_json = "1.0.x"